--- a/DFS+BFS/DFS+BFS.vcxproj.filters
+++ b/DFS+BFS/DFS+BFS.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="네트워크.cpp">
       <Filter>소스 파일\프로그래머스</Filter>
     </ClCompile>
+    <ClCompile Include="단어 변환.cpp">
+      <Filter>소스 파일\프로그래머스</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
