--- a/DFS+BFS/DFS+BFS.vcxproj.filters
+++ b/DFS+BFS/DFS+BFS.vcxproj.filters
@@ -51,5 +51,11 @@
     <ClCompile Include="여행경로.cpp">
       <Filter>소스 파일\프로그래머스</Filter>
     </ClCompile>
+    <ClCompile Include="연결 요소의 개수.cpp">
+      <Filter>소스 파일\백준</Filter>
+    </ClCompile>
+    <ClCompile Include="섬의 개수.cpp">
+      <Filter>소스 파일\백준</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
