--- a/DFS+BFS/DFS+BFS.vcxproj.filters
+++ b/DFS+BFS/DFS+BFS.vcxproj.filters
@@ -63,5 +63,8 @@
     <ClCompile Include="미로 탐색.cpp">
       <Filter>소스 파일\백준</Filter>
     </ClCompile>
+    <ClCompile Include="토마토.cpp">
+      <Filter>소스 파일\백준</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
