--- a/DFS+BFS/DFS+BFS.vcxproj.filters
+++ b/DFS+BFS/DFS+BFS.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="소스 파일\백준">
       <UniqueIdentifier>{34290e44-1036-4ab4-8b7b-da41020c441b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\코드업">
+      <UniqueIdentifier>{dacbc992-fe61-4f69-b1f6-307fb34739aa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="음료수 얼려 먹기.cpp">
@@ -71,6 +74,9 @@
     </ClCompile>
     <ClCompile Include="안전영역.cpp">
       <Filter>소스 파일\백준</Filter>
+    </ClCompile>
+    <ClCompile Include="배수.cpp">
+      <Filter>소스 파일\코드업</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
