--- a/DFS+BFS/DFS+BFS.vcxproj.filters
+++ b/DFS+BFS/DFS+BFS.vcxproj.filters
@@ -87,5 +87,8 @@
     <ClCompile Include="MooTube.cpp">
       <Filter>소스 파일\백준</Filter>
     </ClCompile>
+    <ClCompile Include="컴백홈.cpp">
+      <Filter>소스 파일\백준</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
